tryfix webpack rules

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta name="author" content="Lucas Coutinho">
 	<meta name="description" content="A simple treasure hunter game using phaser
 	3 framework">
-	<link rel="icon" href="${require('./src/assets/chest.png')}" type="image/png">
-	<link rel="shortcut icon" href="${require('./src/assets/chest.png')}" type="image/png">
+	<link rel="icon" href="${require('/src/assets/chest.png')}" type="image/png">
+	<link rel="shortcut icon" href="${require('/src/assets/chest.png')}" type="image/png">
 	<title>S.U.B</title>
   </head>
   <body>
